<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout" />
    <item
        android:id="@+id/action_account_info"
        android:title="@string/action_account_info" />
    <item
        android:id="@+id/action_message"
        android:title="@string/action_message" />
    <item
        android:id="@+id/action_friend"
        android:title="@string/action_friend" />
    <item
        android:id="@+id/action_share_location"
        android:title="@string/action_share_location" />
    <item
        android:id="@+id/action_team"
        android:title="@string/action_team" />

</menu>