<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/header_bg">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/btn_selector"
            android:background="#00000000"
            android:id="@+id/back_btn_help" />

        <TextView
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="帮助"
            android:textSize="23sp"
            android:textColor="@color/register_title_text" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/transparent"

            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="使用注册"
                android:textSize="12sp"
                android:textColor="#ffbbbbbd" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <LinearLayout
                android:id="@+id/activity_help_captcha_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="15"
                    android:paddingLeft="5dp"
                    android:paddingTop="14dp"
                    android:text="收不到验证码"
                    android:textSize="16sp"
                    android:background="#00000000" />

                <ImageView
                    android:id="@+id/help_a_1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/help_a"
                    android:background="#00000000"/>
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <RelativeLayout
                android:id="@+id/box_captcha_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/help_captcha_1"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <LinearLayout
                android:id="@+id/activity_help_captcha_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="15"
                    android:paddingLeft="5dp"
                    android:paddingTop="14dp"
                    android:text="为什么输入验证码后会出现错误提示？"
                    android:textSize="16sp"
                    android:background="#00000000" />

                <ImageView
                    android:id="@+id/help_a_2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/help_a"
                    android:background="#00000000"/>
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />
            <RelativeLayout
                android:id="@+id/box_captcha_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="15dp"
                    android:text="@string/help_captcha_2"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="服务内容"
                android:textSize="12sp"
                android:textColor="#ffbbbbbd" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <LinearLayout
                android:id="@+id/activity_help_server_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="15"
                    android:paddingLeft="5dp"
                    android:paddingTop="14dp"
                    android:text="如何添加好友和关联通讯录？"
                    android:textSize="16sp"
                    android:background="#00000000" />

                <ImageView
                    android:id="@+id/help_a_3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/help_a"
                    android:background="#00000000"/>
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />
            <RelativeLayout
                android:id="@+id/box_server_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/help_server_1"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <LinearLayout
                android:id="@+id/activity_help_server_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="15"
                        android:paddingTop="14dp"
                        android:paddingLeft="5dp"
                        android:text="请问SocialMap支持什么系统？"
                        android:textSize="16sp"
                        android:background="#00000000" />

                <ImageView
                    android:id="@+id/help_a_4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/help_a"
                    android:background="#00000000"/>


            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />
            <RelativeLayout
                android:id="@+id/box_server_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/help_server_2"
                    />

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:text="特色功能"
                android:textSize="12sp"
                android:textColor="#ffbbbbbd" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            <LinearLayout
                android:id="@+id/activity_help_server_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="15"
                    android:paddingLeft="5dp"
                    android:paddingTop="14dp"
                    android:text="我能用社交地图干什么？"
                    android:textSize="16sp"
                    android:background="#00000000" />

                <ImageView
                    android:id="@+id/help_a_5"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@drawable/help_a"
                    android:background="#00000000"/>
            </LinearLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />
            <RelativeLayout
                android:id="@+id/box_server_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="15dp"
                    android:paddingRight="10dp"
                    android:text="@string/help_server_3"/>

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#ffbbbbbd" />

            

        </LinearLayout>
        
    </ScrollView>
</LinearLayout>


